--- a/pre.tex
+++ b/pre.tex
@@ -13,7 +13,7 @@
 {\LARGE Daniel Nascimento Teixeira}
 \par
 \vspace{200pt}
-{\Huge Uma Técnica de Particionamento Aprori para Malhas Triangulares utilizando Quadtree}
+{\Huge Técnicas de Particionamento para Malhas}
 \par
 \vfill
 \textbf{{\large Fortaleza}\\
@@ -40,7 +40,7 @@
 {\LARGE Daniel Nascimento Teixeira}
 \par
 \vspace{200pt}
-{\Huge Uma Técnica de Particionamento Aprori para Malhas Triangulares utilizando Quadtree}
+{\Huge Técnicas de Particionamento para Malhas}
 \end{center}
 \par
 \vspace{90pt}
@@ -63,16 +63,16 @@
 \hspace{8em}\fbox{\begin{minipage}{10cm}
 Aluno, Daniel Nascimento Teixeira.
 
-\hspace{2em}Uma Técnica de Particionamento Aprori para Malhas Triangulares utilizando Quadtree
+\hspace{2em} Técnicas de Particionamento para Malhas
 
 \hspace{2em}\pageref{LastPage} páginas
 
-\hspace{2em}Dissertação (Mestrado) - Universidade Federal do Ceará. Departamento de Computação.
+\hspace{2em}Pré-proposta (Mestrado) - Universidade Federal do Ceará. Departamento de Computação.
 
 \begin{enumerate}
-\item Malha triangular
+\item Malhas
 \item Subdivisão de domínio
-\item Quadtree
+\item Paralelismo
 \end{enumerate}
 I. Universidade Federal do Ceará. Departamento de Computação.
 
@@ -86,8 +86,8 @@ I. Universidade Federal do Ceará. Departamento de Computação.
 \vspace{10em}
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}l l}
 \rule{16em}{1px} 	& \rule{16em}{1px} \\
-Prof. Dr. 		& Prof. Dr. \\
-Nome			& Nome
+Prof. Dr. 		& Prof.ª Dr. \\
+Creto Vidal			& Emanuele
 \end{tabular*}
 
 \par
@@ -95,7 +95,7 @@ Nome			& Nome
 
 \parbox{16em}{\rule{16em}{1px} \\
 Prof. Dr. \\
-Nome do Orientador}
+Joaquim Bento}
 \end{center}
 
 \newpage
