--- a/cap1.tex
+++ b/cap1.tex
@@ -6,11 +6,11 @@
 \pagenumbering{arabic}
 
 \chapter{Introdução}\label{intro}
-É notavel o crescente avanço do poder computacinal dos computadores nos ultimos anos. Já é comum inclusive computadores pessoais terem mais de um processador. Desenvolver programas ou algoritmos que não utilizam corretamente os recursos disponíveis nas máquinas resulta num tempo de execução maior.
+É notável o crescente avanço do poder computacional dos computadores nos últimos anos. Já é comum inclusive computadores pessoais terem mais de um processador. Desenvolver programas ou algoritmos que não utilizam corretamente os recursos disponíveis nas máquinas resulta num tempo de execução maior do que se utilizado todos os recursos da máquina.
 
-O maior desafio atual é desenvolver técnicas que possuam boa escalabilidade, ou seja, ter um aumento no desempenho sob carga quando mais recursos forem disponíveis. Ao mesmo tempo buscamos obter resultados tão bons quanto os resultados do algoritmo sequencial.
+O maior desafio atual é desenvolver técnicas que possuem boa escalabilidade, ou seja, ter um aumento no desempenho sob carga quando mais recursos forem disponíveis. Ao mesmo tempo buscamos obter resultados tão bons quanto os resultados do algoritmo sequencial.
 
-Nosso trabalho trata de malhas bidimensionais, mais precisamente triangulações. Essas malhas são bastante utilizada em diversas áreas e aplicaçãções. Na engenharia é bastante utilizado em métodos de elementos finitos(MEF). Em computação gráfica é muito utilizado para a visualização e modelagem objetos e ambientes. Há usos também em  sistemas de informações geográficas e projetos assistidos por computadores para a modelagem de objetos industriais.
+Nosso trabalho está focado em malhas bidimensionais, mais precisamente triangulações. Essas malhas são bastante utilizada em diversas áreas e aplicações. Na engenharia é bastante utilizado em métodos de elementos finitos(MEF). Em computação gráfica é muito utilizado para a visualização e modelagem objetos e ambientes. Há usos também em  sistemas de informações geográficas e projetos assistidos por computadores para a modelagem de objetos industriais.
 
 A qualidade da malha gerada é bastante importante. Em MEFs por exemplo, a qualidade de dos elementos (os polígonos, em malhas bidimensionais) são de extrema importância pois a se malha tiver uma grande quantidade de elementos ruins, é possível que o MEF não convirja. Por necessitar de malhas bastante refinadas, é comum que MEFs usem malhas grandes, com milhões de elementos.
 
@@ -23,5 +23,5 @@ Em geração de malha para aplicações científicas é preciso ter uma boa téc
      \label{fig:imagem10}
  \end{figure}
 
-O restante deste trabalho está dividido em quatro seções. No capítulo seguinte faz uma apresentação do que se tem feito atualmente na área de subdivisão de domínios e lá mostraremos mais do método que estamos propondo. O capítulo 3 descreve os algoritmos existentes para geração de malhas bidimensionais, mais precisamente triangulações. Finalmente, no capítulo 4 vamos definir a linha de estudo além do cronograma do trabalho.
+O restante deste trabalho está dividido em quatro seções. No capítulo seguinte faz uma apresentação do que se tem feito atualmente na área de subdivisão de domínios. O capítulo 3 descreve os algoritmos existentes para geração de malhas bidimensionais, mais precisamente triangulações. Finalmente, no capítulo 4 vamos definir a linha de estudo além do cronograma do trabalho.
 
